# game-of-life-fs

./: Cargo.toml  README.md  archive-listing.txt
.github/workflows/: ci.yaml
src/: cli.rs  main.rs  utils.rs  world.rs
